Disable CI on the main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     parallelism: 1
     branches:
       ignore:
-        - master
+        - main
         - second-edition-ja
     steps:
       - run:
